--- a/packages/goog.crypt/.editorconfig
+++ b/packages/goog.crypt/.editorconfig
@@ -7,7 +7,7 @@ indent_style = space
 insert_final_newline = true
 trim_trailing_whitespace = true
 
-[*.{js,jsx,json}]
+[*.{js,jsx,ts,tsx,json}]
 charset = utf-8
 
 [*.md]
