--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@google-closure-library/types",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "description": "google closure library typescript types",
   "keywords": [
     "@google-closure-library/types",
@@ -30,7 +30,7 @@
     "url": "https://github.com/codejamninja/google-closure-library"
   },
   "scripts": {
-    "build": "sh scripts/build.sh && npm run format && ts-ignore && tsc -d --emitDeclarationOnly && cp -r src/@types lib",
+    "build": "sh scripts/build.sh && npm run format && ts-ignore && tsc -d --noEmit && cp src/index.d.ts lib && cp -r src/@types lib",
     "clean": "git clean -fXd -e \\!node_modules -e \\!node_modules/**/* && jest --clearCache",
     "clean:purge": "jest --clearCache && git clean -fXd",
     "format": "prettier --write ./**/*.{json,md,scss,yaml,yml,js,jsx,ts,tsx} --ignore-path .gitignore",
