--- a/packages/goog.crypt/package.json
+++ b/packages/goog.crypt/package.json
@@ -44,7 +44,8 @@
     "test": "npm run lint && jest"
   },
   "dependencies": {
-    "core-js": "^3.1.3"
+    "core-js": "^3.1.3",
+    "google-closure-library": "^20190929.0.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.4.4",
@@ -74,6 +75,6 @@
     "verbose": true
   },
   "typeDefinitions": {
-    "@google-closure-library/types": "0.0.2"
+    "@google-closure-library/types": "0.0.4"
   }
 }
