--- a/packages/goog.crypt/package.json
+++ b/packages/goog.crypt/package.json
@@ -32,7 +32,7 @@
     "url": "https://github.com/codejamninja/google-closure-library"
   },
   "scripts": {
-    "build": "npm run test && babel src -d lib --extensions \".ts,.tsx\" --source-maps inline && tsc -d --emitDeclarationOnly",
+    "build": "npm run test && babel src -d lib --extensions \".js,.jsx\" --source-maps inline",
     "clean": "git clean -fXd -e \\!node_modules -e \\!node_modules/**/* && jest --clearCache",
     "clean:purge": "jest --clearCache && git clean -fXd",
     "format": "prettier --write ./**/*.{json,md,scss,yaml,yml,js,jsx,ts,tsx} --ignore-path .gitignore",
@@ -45,23 +45,20 @@
   },
   "dependencies": {
     "core-js": "^3.1.3",
-    "google-closure-library": "^20190929.0.0"
+    "google-closure-library": "^20190929.0.0",
+    "tsdpm": "^0.1.6"
   },
   "devDependencies": {
     "@babel/cli": "^7.4.4",
     "@babel/core": "^7.4.5",
     "@babel/node": "^7.4.5",
-    "@babel/preset-typescript": "^7.3.3",
     "@types/jest": "^24.0.13",
-    "@typescript-eslint/eslint-plugin": "^1.9.0",
-    "@typescript-eslint/parser": "^1.9.0",
+    "babel-eslint": "^10.0.3",
     "babel-preset-jam": "^0.4.1",
     "eslint": "^5.16.0",
     "eslint-config-airbnb-typescript": "^4.0.0",
     "eslint-config-jam": "^0.2.12",
     "jest": "^24.8.0",
-    "tsc": "^1.20150623.0",
-    "tsdpm": "^0.1.6",
     "typescript": "^3.5.1"
   },
   "engines": {
@@ -75,6 +72,6 @@
     "verbose": true
   },
   "typeDefinitions": {
-    "@google-closure-library/types": "0.0.4"
+    "@google-closure-library/types": "0.0.5"
   }
 }
