--- a/packages/goog.crypt/package.json
+++ b/packages/goog.crypt/package.json
@@ -38,7 +38,7 @@
     "format": "prettier --write ./**/*.{json,md,scss,yaml,yml,js,jsx,ts,tsx} --ignore-path .gitignore",
     "lint": "npm run format && tsc --allowJs --noEmit && eslint --ext .ts,.tsx ./",
     "lint:fix": "npm run format && tsc --noEmit && eslint --ext .ts,.tsx --fix ./",
-    "postinstall": "tsdpm install",
+    "postinstall": "tsdpm postinstall @google-closure-library/goog.crypt",
     "prepublish": "npm run build",
     "start": "babel-node src --extensions \".ts,.tsx\"",
     "test": "npm run lint && jest"
@@ -46,7 +46,7 @@
   "dependencies": {
     "core-js": "^3.1.3",
     "google-closure-library": "^20190929.0.0",
-    "tsdpm": "^0.1.11"
+    "tsdpm": "^0.1.15"
   },
   "devDependencies": {
     "@babel/cli": "^7.4.4",
